v3.6.0:
 Developers:
  - Test dataset relion40_sta_tutorial_data expanded.
v3.5.0:
 Users:
  - New protocol to import tilt-series CTF from different plugins
  - The CTF tomo series viewer now only plots the Enabled tilt images/ctfs.
  - Template HIV- STA with reliontomo: update the CTF importing method to the new centralized located in em-tomo.
  - Prevent viewers from locking the screen focus.
  - Improve SetOfCoordinates3D str method.
  - Fit vesicles prot nos requesting the tomograms. Refactored.
  - Fix accum dose in TS import without mdoc.
  - Napari 0.4.17 is the default version. boxmanager and tomotwin are now independent

Developers:
  - Improve the Test Centralization layer.
  - Tests for AreTomo2 CTF import added.
  - Expand the method checkTomograms from the Test Centralization Layer.
  - Import tomograms: the acquisition is now copied to both the set and the items.
  - Some refactor in protocol_ts_estimate_ctf.py required for the new CTF code design prots approach.
  - TiltSeries object: expand the method to generate the imod tlt file allowing to consider the excluded views.
  - TS movies not hiding any acquisition parameter to prevent accidental override.
v3.4.1:
  - Update HIV-tiltseries-alignment-reconstruction.json template
  - Update Picking template II
  - Update Relion4 template
v3.4:
  - Compose tilt series: Allowing tilt series with gaps
  - New protocol: "meshes from tomoMask"
  - Tomoviewer: Can sort by acquisition order too.
  - Sampling rate in Coordinates3D rounded to 2 decimal places upon visualization.
  - HIV STA template divided into 2: Dynamo STA and Relion4 STA
  - Picking template tutorial (cryolo, eman, deepfinder) changed
  Developers:
  - TestBaseCentralizedLayer: New test class to make more precise assertions on outputs.
  - Adding a method for extracting odd-even filenames
  - Fix schedule execution in protocol for importing coords from Scipion
v3.3: