@@ -3,6 +3,7 @@ v3.6.0:
   - Test dataset relion40_sta_tutorial_data expanded.
 v3.5.0:
  Users:
+  - Improve the TiltSeries viewer. Allowing to exclude TiltImages
   - New protocol to import tilt-series CTF from different plugins
   - The CTF tomo series viewer now only plots the Enabled tilt images/ctfs.
   - Template HIV- STA with reliontomo: update the CTF importing method to the new centralized located in em-tomo.
